Adds correct forkme link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1>ScrollStack</h1>
   </header>
   <section id="intro">
-    <a href="https://github.com/you"><img style="position: absolute; top: 50%; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/ferdinandtorggler/scrollstack"><img style="position: absolute; top: 50%; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
     <h2>What is ScrollStack?</h2>
     <p>
       ScrollStack is a jQuery plugin which allows you to easily
